# AndroidMonitor

./: .gitignore  .gitmodules  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/org/webrtsp/monitor/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Actor.cpp  Actor.h  AgentSession.cpp  AgentSession.h  CMakeLists.txt  ClientSession.cpp  ClientSession.h  GStreamerHelpers.cpp  GStreamerHelpers.h  GStreamerPlayer.cpp  JVMBridge.cpp  JVMBridge.h  JVMHelpers.cpp  JVMHelpers.h  ONVIFDiscoverer.cpp  ONVIFEventsChecker.cpp  ONVIFUrlFetcher.cpp  ReStreamer.cpp  WebRTSPClient.cpp  main.cpp
app/src/main/java/org/webrtsp/monitor/: AppDatabase.kt  AppDatabaseModule.kt  Application.kt  CoroutineDispatchersModule.kt  CoroutineScopesModule.kt  GStreamerPlayer.kt  Helpers.kt  MainActivity.kt  MainActivityViewModel.kt  MotionEventHandler.kt  MotionEventRepository.kt  MotionViewActivity.kt  MotionViewActivityViewModel.kt  NoSourceScreen.kt  ONVIFDiscoverer.kt  PermissionsRepository.kt  PowerStateRepository.kt  SettingsDataStoreModule.kt  SettingsRepository.kt  SettingsScreen.kt  SettingsViewModel.kt  Source.kt  SourceEditScreen.kt  SourceEditViewModel.kt  SourceRepository.kt  SourceViewScreen.kt  SourceViewViewModel.kt  SourcesRepository.kt  WaitingBox.kt  WaitingIcon.kt
app/src/main/java/org/webrtsp/monitor/onvif/: ONVIFDiscoverer.kt  ONVIFEventTrackerService.kt  ONVIFEventsChecker.kt  ONVIFUrlFetchRepository.kt  ONVIFUrlFetcher.kt
app/src/main/java/org/webrtsp/monitor/restreamer/: ReStreamer.kt  ReStreamerService.kt  WebRTSPClient.kt
app/src/main/java/org/webrtsp/monitor/ui/theme/: Color.kt  Spacing.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  progress_activity.xml  videocam.xml  videocam_alert.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ru/: strings.xml
app/src/test/java/org/webrtsp/monitor/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
